# elte-cs-bsc

./: .gitignore  README.md
1/.funkcProg/: Lesson01pre.hs  Lesson03pre.hs  Lesson04pre.hs  Lesson06pre.hs  Lesson09pre.hs  Lesson11pre.hs
1/.funkcProg/beadando/: BeadSkeleton.hs
1/.funkcProg/gyak1/: Hazi1.hs  gyak1.hs
1/.funkcProg/gyak12/: Rzh11.hs
1/.funkcProg/gyak3/: Hazi3.hs  gyak3.hs
1/.funkcProg/gyak4/: Hazi4.hs
1/.funkcProg/gyak5/: Hazi5.hs  gyak5.hs
1/.funkcProg/gyak6/: Hazi6.hs
1/.funkcProg/gyak7/: Hazi7.hs
1/.funkcProg/gyak8/: gyak8.hs
1/.impProg/: 1.c  README.md  gyak5opc
1/.impProg/10/: Rzh8  Rzh8.c  gyak10  gyak10.c
1/.impProg/11/: gyak11.c
1/.impProg/12/: Rzh10  Rzh10.c  box.h  gyak12  main.c
1/.impProg/13/: game.c  game.h  snake
1/.impProg/3/: a.out  guessing  gyak3  gyak3.c  szorzotabla.c
1/.impProg/4/: caseconvert
1/.impProg/5/: a.out  fgets.c  gyak5  gyak5opc.c  rop.c
1/.impProg/6/: gyak6.c  opgy  rop  rop.c
1/.impProg/7/: gyak7  gyak7.c  pointer-gyakorlas.c
1/.impProg/8/: gyak8.c
1/.impProg/9/: file.txt  gyak9  gyak9.c  rzh7
1/.impProg/bead/: bead  bead.c  bead.h  input.txt
1/.impProg/malloc&ptr gyakorlas/: readme.md
1/.innVal/: README.md  celkozonseg meghatarozasa.docx
1/.prog/: README.md
1/.prog/_3_csere/: _3_csere.sln
1/.prog/beadando/: esős napok.docx
1/.prog/koltopenz/: koltopenz.sln
1/.prog/szignum/: szignum.docx  szignum.sln
1/.prog/utolsoSzamjegy/: utolsoSzamjegy.sln
1/.szamRend/: README.md  gyak-3.txt  szamrend-powershell.txt
1/.szamRend/Beadando/: adat.txt
1/Basic mathematics/: README.md
1/Business fundamentals/: 4 P’s Marketing Mix Template.docx
1/Business fundamentals/eloadas/: Marketing_2_ea_Innov_vall_men_2024_25_1_GM.pptx
1/Business fundamentals/gyakorlat/: 4 P’s Marketing Mix Template.docx  Annual_Business_Budget_2023 InnoMan.xlsx  BMC template.docx  Business Planning.docx  Innovatív vállalkozás menedzsment_teljesítési_követelmények_2024 (1).pptx  Marketing_Feladat.docx  USP_Validáció_Feladat.docx
1/Computer systems/beadando/: auto.sh  data.txt  onvezeto.ps1
1/Computer systems/zh/: szamrend_2zh.txt
1/Functional programming/: Lesson07pre.hs  Lesson08pre.hs  Lesson10pre.hs  README.md
1/Functional programming/LearnYouAHaskell/: 0startingOut.hs  1Types.hs
1/Functional programming/gyak2/: gyak2.hs
1/Functional programming/gyak3/: Rzh2.hs
1/Functional programming/gyak5/: gyak5.hs
1/Functional programming/gyak6/: Rzh5.hs  gyak6.hs
1/Functional programming/minta/: minta.hs
1/Imperative programming/10/: gyak10
1/Imperative programming/11/: gyak11.c
1/Imperative programming/12/: box  exam.c
1/Imperative programming/13/: main.c
1/Imperative programming/2/: 1.out
1/Imperative programming/3/: ropzh.c
1/Imperative programming/4/: gyak4.c
1/Imperative programming/5/: gyak5opc.c
1/Imperative programming/7/: gyak7  pgyak
1/Imperative programming/8/: gyak8
1/Imperative programming/9/: header.h  rzh7.c
1/Imperative programming/bead/: bead  bead.c  bead.h  main.c
1/Imperative programming/malloc&ptr gyakorlas/: input.txt
1/Programming/hazi/: hazi3.docx
2/Algo I/eloadas/: 10. előadás.pptx  11. előadás.pptx  3. előadás.pptx  4. előadás.pptx  6. előadás.pptx  7. előadás.pptx  8. előadás.pptx  9. előadás.pptx
2/Algorithms and data structures I/: README.md
2/Algorithms and data structures I/eloadas/: 2. előadás.pptx  5. előadás.pptx
2/Algorithms and data structures I/szorgalmi/: Hashtable szorgalmi.xlsx
2/Analysis I/: README.md
2/Discrete mathematics I/: README.md
2/Java/hazi/: Complex.java
2/Java/seged/: labs_hu.html
2/Jog/: JogQuiz  JogQuiz.cpp  README.md
2/Law fundamentals/: README.md
2/OEP/nagybeadando/: Teniszklub.drawio
2/Object-oriented programming/: README.md
2/Programming languages/: README.md
2/Web I/Beadando/: Weblap tartalom.docx
2/Web development/: README.md
2/Web programming/: README.md
3/Algorithms and data structures II/: README.md
3/Algorithms and data structures II/eloadas/: 1. előadás.pptx  2. előadás.pptx  3. előadás.pptx  4. előadás.pptx  5. előadás.pptx  6. előadás.pptx
3/Algorithms and data structures II/hazi/: hf01.typ
3/Analysis II/: README.md  bizonyitando-tetelek.typ  gy1.typ  ropzh1.typ
3/Analysis II/hazi/: 100-integral.typ  50-derivalt.typ  50-integral.typ  hazi02.typ  hazi03.typ  hazi04.typ  hazi05.typ  hazi06.typ  hazi08.typ  hazi09.typ  hazi10.typ
3/Analysis II/ropzh/: ropzh01.typ  ropzh02.typ  ropzh03.typ  ropzh04.typ  ropzh05.typ  ropzh06.typ  ropzh07.typ  ropzh08.typ  ropzh09.typ  ropzh1.typ  ropzh10.typ
3/C++/: README.md
3/C++/beadando/: main.cpp
3/Discrete mathematics II/: README.md
3/Discrete mathematics II/gyakorlat/: gy1.typ
3/Discrete mathematics II/szorgalmi/: szorg01.typ  szorg02.typ
3/Event-driven applications/: README.md
3/GPU programming/: README.md
3/GPU programming/gpu_course_opencl/: CMakeLists.txt  cmake_install.cmake  vcpkg.json
3/GPU programming/gyakorlat/gpu_course_opencl/: CMakeLists.txt  README.md  vcpkg.json
3/GPU programming/gyakorlat/gpu_course_opencl/cmake/: OpenGLConfig.cmake
3/GPU programming/gyakorlat/gpu_course_opencl/include/: oclutils.hpp  oglutils.hpp
3/GPU programming/gyakorlat/gpu_course_opencl/kernels/: krn_reduce_local.cl
3/GPU programming/gyakorlat/gpu_course_opencl/src/: main_03_reduce_global.cpp  main_04_reduce_local.cpp  main_05_hello_opengl.cpp  main_07_scan.cpp
3/GPU programming/gyakorlat/gpu_course_opencl/src/opencl_06_opengl_nbody/: CMakeCache.txt  CMakeLists.txt  Makefile  MyApp.cpp  MyApp.h  cmake_install.cmake  main.cpp
3/GPU programming/gyakorlat/gpu_course_opencl/src/opencl_06_opengl_nbody/common/: GLUtils.cpp
3/GPU programming/gyakorlat/gpu_course_opencl/src/opencl_06_opengl_nbody/common/imgui/: imgui_impl_opengl3.cpp  imgui_impl_opengl3.h  imgui_impl_opengl3_simplified.cpp  imgui_impl_opengl3_simplified.h  imgui_impl_sdl2.cpp  imgui_impl_sdl2.h  imgui_impl_sdl2_simplified.cpp  imgui_impl_sdl2_simplified.h
3/Numerical methods I/: README.md
3/Python/: README.md
3/Python/eloadas/: ea5.py  (+5 more)
(+1294 files in other folders)
